--- a/AUTHORS.TXT
+++ b/AUTHORS.TXT
@@ -1,2 +1,2 @@
-Technocratic Republic of Theodia <Theodia@RiseUp.net> (Organization)
+Technocratic Republic of Aethodia <Aethodia@RiseUp.net> (Organization)
 Miles B Huff <MilesBHuff@NoReply.GitHub.com> (Lead Developer)
